Set default-compartment-id to 1

--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,5 @@
 (library (name parsexp) (public_name parsexp) (libraries sexplib0 base.caml)
+(ocamlopt_flags (-default-compartment-id 1 -function-sections))
  (preprocess no_preprocessing)
  (lint
   (pps ppx_js_style -check-doc-comments ppx_compare ppx_sexp_conv
